Add Allure report support